<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Global app values -->
    <string name="app_name">IIEns</string>
    <string name="action_refresh">Actualiser</string>
    <string name="settings">Paramètres</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>

    <!-- Settings boolean values names -->
    <string name="bool_news_update_name">news_new_update</string>
    <string name="bool_anniv_update_name">anniv_new_update</string>
    <string name="bool_edtSearch_update_name">edtSearch_new_update</string>

    <!-- Activité Splash Screen -->
    <string name="hint_logo">Logo ENSIIE</string>

    <!-- Activité intro -->
    <string name="intro_titre_1">Bienvenue sur IIEns !</string>
    <string name="intro_description_1">Retrouvez les services d\'iiens.net et un peu plus</string>
    <string name="intro_titre_2">News et anniversaires</string>
    <string name="intro_description_2">Consultez et soyez notifiés des news publiés et des anniversaires du jour</string>
    <string name="intro_titre_3">Twitter</string>
    <string name="intro_description_3">Retrouvez les gazouillis (...c\'est dans le dico) des comptes de l\'école et des partenaires</string>
    <string name="intro_titre_4">Emploi du temps</string>
    <string name="intro_description_4">Retrouvez votre emploi du temps sur votre mobile et synchronisez-le avec votre agenda local</string>
    <string name="intro_titre_5">AriseID et ItvTube</string>
    <string name="intro_description_5">Connectez-vous avec vos identifiant AriseID et regardez les projs d\'Itvtube où vous voulez</string>
    <string name="intro_titre_6">Profitez-bien !</string>
    <string name="intro_description_6">Et y\'en a plus encore !\nN\'hésitez pas à contribuer à l\'appli sur Github :)\nPar Loki (promo 2014)</string>
    <string name="intro_ok">Ok</string>

    <!-- Activité Login -->
    <string name="hint_user">Identifiant ARISE</string>
    <string name="hint_password">Mot de passe</string>
    <string name="connect_button">CONNEXION</string>
    <string name="offline_button">PASSER</string>
    <string name="in_progress">Connexion en cours&#8230;</string>
    <string name="forgot_password">Mot de passe oublié</string>
    <string name="authenticated">Connecté ! Récupération des infos&#8230;</string>
    <string name="offline_mode">Récupération des infos&#8230;</string>
    <string name="error_incorrect">Erreur d\'identifiants</string>
    <string name="error_field_required">Champ obligatoire</string>
    <string name="auto_connect">Connexion automatique</string>

    <!-- Menu de navigation -->
    <string name="menu_home">Accueil</string>
    <string name="menu_edt">Emploi du temps</string>
    <string name="menu_twitter">Twitter</string>
    <string name="menu_group_pages">Par AriseID</string>
    <string name="menu_clubs">Itvtube</string>
    <string name="menu_breviaire">Bréviaire</string>
    <string name="menu_arise">Arise</string>
    <string name="menu_etranger">Partir à l\'étranger</string>
    <string name="menu_settings">Paramètres</string>
    <string name="menu_anniv">Anniversaires</string>

    <!-- Toast messages -->
    <string name="arise_unavailable">Arise = 404 not found</string>
    <string name="internet_unavailable">Connexion à internet requise</string>
    <string name="api_error">Données introuvables</string>
    <string name="cal_all_sync_done">Synchronisation avec votre agenda terminée</string>
    <string name="cal_week_sync_done">La semaine a été ajoutée à votre agenda</string>
    <string name="cal_event_sync_done">L\'évènement a été ajouté à votre agenda</string>
    <string name="internal_error">Erreur de traitement, veuillez réessayer</string>
    <string name="back_exit_warning">Cliquer à nouveau pour quitter</string>
    
    <!-- AlertDialogs messages -->
    <string name="alert_no_gps_title">Google Play Services indisponible</string>
    <string name="alert_no_gps_msg">L\'application ne pourra pas recevoir et afficher les notifications</string>

    <string-array name="main_menu_entries">
        <item>Accueil</item>
        <item>Emploi du temps</item>
        <item>Anniversaires</item>
        <item>Twitter</item>
        <item>Bréviaire</item>
    </string-array>

    <!-- Values for activity_main.xml -->
    <string name="open_drawer">Ouvrir</string>
    <string name="close_drawer">Fermer</string>

    <!-- Notifications titre -->
    <string name="notif_news_title">News</string>
    <string name="notif_partiels_title">Attention partiels !</string>
    <string name="notif_anniv_title">Anniversaires du jour</string>
    <string name="notif_events_title">Events aujourd\'hui</string>

    <!-- Values for activity_preferences.xml -->
    <string name="pref_notifs_txt">Affichage des notifications</string>
    <string name="pref_anniv_title">Pour les anniversaires du jour</string>
    <string name="pref_anniv_key">anniv_notif</string>
    <string name="pref_news_title">Pour les news publiées</string>
    <string name="pref_news_key">news_notif</string>
    <string name="pref_events_title">Pour les events associatifs</string>
    <string name="pref_events_key">club_notif</string>
    <string name="pref_partiel_title">Pour les partiels</string>
    <string name="pref_partiel_key">partiel_notif</string>
    <string name="pref_partiel_summary">Notifications pour les partiels</string>
    <string name="pref_activated">Activé</string>
    <string name="pref_deactivated">Désactivé</string>
    <string name="pref_fonctionnement">Fonctionnement</string>
    <string name="pref_login_screen">Page de connexion au lancement</string>
    <string name="pref_bottom_nav">Barre de navigation basse</string>
    <string name="pref_bottom_nav_key">bottom_navigation</string>
    <string name="pref_mode_nuit">Mode nuit</string>
    <string name="pref_mode_nuit_key">nightmode</string>

    <string-array name="pref_partiel_entries">
        <item value="0">Désactivé</item>
        <item value="1">Partiels de 1A</item>
        <item value="2">Partiels de 2A</item>
        <item value="3">Partiels de 3A</item>
    </string-array>
    <string-array name="pref_partiel_values">
        <item value="0">none</item>
        <item value="1">partiel1A</item>
        <item value="2">partiel2A</item>
        <item value="3">partiel3A</item>
    </string-array>

    <!-- News fragment values -->
    <string name="news_title">Sans titre</string>
    <string name="news_description">Aucun contenu</string>
    <string name="title_activity_google_play_services">GooglePlayServicesActivity</string>

    <!-- EdtForm values -->
    <string name="edt_search_txt">Année :</string>
    <string name="edt_result_title">Résultats de la recherche</string>
    <string name="edtForm_1A">1A</string>
    <string name="edtForm_2A">2A</string>
    <string name="edtForm_3A">3A</string>
    <string name="edtForm_week">Semaine :</string>
    <string name="edtForm_group">Groupe :</string>
    <string name="edtForm_grpcomm">Communication :</string>
    <string name="edtForm_langue">Langue :</string>
    <string name="edtForm_search">Rechercher</string>
    <string name="edtForm_waitResult">Recherche en cours &#8230;</string>
    <string name="edtForm_newSearch">Nouvelle recherche</string>
    <string name="edtForm_tc">Tronc commun</string>
    <string name="edtForm_op1">Option 1</string>
    <string name="edtForm_op2">Option 2</string>
    <string name="edtForm_op3">Option 3</string>
    <string name="edtForm_op4">Option 4</string>
    <string name="edtForm_op5">Option 5</string>
    <string name="edtForm_op6">Option 6</string>
    <string name="edtForm_emptyOp">---</string>
    <string name="edtForm_choseGroup">Choisis une promo patate</string>
    <string name="edtForm_noResult">Rien cette semaine là</string>

    <!-- EdtResult values -->
    <string name="export_to_calendar_title">Exporter vers l\'agenda</string>
    <string name="export_item_to_calendar_msg">Voulez-vous exporter cet évènement vers votre agenda personnel ?</string>
    <string name="export_week_to_calendar_msg">Voulez-vous exporter cette semaine vers votre agenda personnel ? (Attention : export basé sur les résultats de la recherche)</string>
    <string name="export_week_to_calendar_done">Semaine ajoutée à votre agenda</string>
    <string name="export_week_to_calendar_chose_group">Choisissez votre groupe</string>
    <string name="lastweek_btn"><![CDATA[<]]></string>
    <string name="nextweek_btn"><![CDATA[>]]></string>

    <!-- EdtItem format -->
    <string name="edtItem_full_format">"<b>%1$s-%2$s</b> : %3$s %4$s %5$s (%6$s)"</string>

</resources>