<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <PreferenceCategory android:title="@string/pref_notifs_txt" >

        <SwitchPreference
            android:defaultValue="true"
            android:disableDependentsState="false"
            android:icon="@drawable/ic_chrome_reader_mode"
            android:key="@string/pref_news_key"
            android:persistent="false"
            android:summary="Affichage des "
            android:summaryOff="@string/pref_deactivated"
            android:summaryOn="@string/pref_activated"
            android:switchTextOff="@string/pref_deactivated"
            android:switchTextOn="@string/pref_activated"
            android:title="@string/pref_news_title"/>

        <SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_cake"
            android:key="@string/pref_anniv_key"
            android:summaryOff="@string/pref_deactivated"
            android:summaryOn="@string/pref_activated"
            android:switchTextOff="@string/pref_deactivated"
            android:switchTextOn="@string/pref_activated"
            android:title="@string/pref_anniv_title"/>

        <SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_school"
            android:key="@string/pref_events_key"
            android:summaryOff="@string/pref_deactivated"
            android:summaryOn="@string/pref_activated"
            android:switchTextOff="@string/pref_deactivated"
            android:switchTextOn="@string/pref_activated"
            android:title="@string/pref_events_title"/>

        <ListPreference
            android:entries="@array/pref_partiel_entries"
            android:entryValues="@array/pref_partiel_values"
            android:icon="@drawable/ic_warning"
            android:key="@string/pref_partiel_key"
            android:summary="@string/pref_partiel_summary"
            android:title="@string/pref_partiel_title"/>
    </PreferenceCategory>

</PreferenceScreen>