<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.iiens.net.Main">

    <item
        android:id="@+id/menu_group_pages"
        android:title="@string/menu_group_pages">

        <menu>
            <group
                android:checkableBehavior="single">

                <item
                    android:id="@+id/action_nav_itvtube"
                    android:title="@string/menu_clubs"
                    android:icon="@drawable/fa_users" />

                <item
                    android:id="@+id/action_nav_breviaire"
                    android:title="@string/menu_breviaire"
                    android:icon="@drawable/fa_music"
                    android:checkable="false" />

            </group>
        </menu>

    </item>

    <group
        android:id="@+id/navigation_other"
        android:checkableBehavior="single">

        <item
            android:id="@+id/action_nav_arise"
            android:title="@string/menu_arise"
            android:icon="@drawable/fa_plug"/>

        <item
            android:id="@+id/action_nav_etranger"
            android:title="@string/menu_etranger"
            android:icon="@drawable/fa_flag"/>

        <item
            android:id="@+id/action_nav_parametres"
            android:title="@string/menu_settings"
            android:icon="@drawable/fa_cogs" />

    </group>

</menu>