<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.iiens.net.Login" >

    <!-- Login progress -->

    <LinearLayout
        android:id="@+id/login_status"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bckgrd"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/card_background"
            android:gravity="center"
            android:orientation="vertical" >

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:indeterminateDrawable="@drawable/progress" />

            <TextView
                android:id="@+id/login_status_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/in_progress"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>

    <!-- Login form -->
    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/login_bckgrd">

        <LinearLayout
            style="@style/LoginFormContainer"
            android:layout_width="260dp"
            android:layout_gravity="center"
            android:background="@drawable/card_background"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp">

            <EditText
                android:id="@+id/username"
                style="@style/LoginEditText"
                android:hint="@string/hint_user"
                android:inputType="textNoSuggestions"
                 />

            <EditText
                android:id="@+id/password"
                style="@style/LoginEditText"
                android:hint="@string/hint_password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword" />

            <CheckBox
                android:id="@+id/auto_connect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/auto_connect"
                android:textColor="@color/black" />

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_connect"
                    style="@style/LoginButton"
                    android:text="@string/connect_button"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:onClick="onConnectClicked" />

                <Button
                    android:id="@+id/btn_offline"
                    style="@style/LoginButton"
                    android:text="@string/offline_button"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:onClick="onOfflineClicked" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/LoginFormContainer"
        android:layout_width="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:background="@drawable/card_background"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginBottom="48dp">
        <Button
            android:id="@+id/btn_forgot_password"
            style="@style/LoginButton"
            android:text="@string/forgot_password"
            android:textSize="12sp"
            android:onClick="onForgotPasswordClicked" />
    </LinearLayout>

    <!-- Webview arise -->
    <include layout="@layout/arise_webview" />
</merge>