<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="?android:colorBackground">

    <LinearLayout
        android:id="@+id/edt_formulaire"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/edt_search_txt"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/chk_promo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/chk_1A"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edtForm_1A" />

                <RadioButton
                    android:id="@+id/chk_2A"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edtForm_2A" />

                <RadioButton
                    android:id="@+id/chk_3A"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edtForm_3A" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/edtForm_week"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/edt_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="16dp"
                android:paddingRight="16dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/edtForm_group" />

            <Spinner
                android:id="@+id/edt_groupe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="16dp"
                android:paddingRight="16dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/edt_comm_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="gone"
            android:animateLayoutChanges="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/edtForm_grpcomm" />

            <Spinner
                android:id="@+id/edt_comm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="16dp"
                android:paddingRight="16dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/edt_langue_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="gone"
            android:animateLayoutChanges="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/edtForm_langue" />

            <Spinner
                android:id="@+id/edt_lang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="16dp"
                android:paddingRight="16dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/edt_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="gone" >

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center" >

            <Button
                android:id="@+id/edt_search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:background="@null"
                android:text="@string/edtForm_search" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>