<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground"
    android:orientation="vertical">

    <TextView
        android:id="@+id/edt_date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkorange"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <include
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        layout="@layout/listview" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/lastweek_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/lastweek_btn" />

        <Button
            android:id="@+id/edt_newsearch_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_margin="8dp"
            android:layout_weight="3"
            android:text="@string/edtForm_newSearch" />


        <Button
            android:id="@+id/nextweek_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/nextweek_btn" />

    </LinearLayout>


</LinearLayout>